tests/syntax_error/let_with_type.jou
def main() -> int:
    let x: int = 1  # Error: there is no 'let' keyword in Jou
